--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "dotenv": "^16.0.3",
     "form-data": "^4.0.0",
     "fs-extra": "^10.1.0",
     "p-queue": "6.6.2",
