Add amazon creating story logic

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "form-data": "^4.0.0",
     "fs-extra": "^10.1.0",
     "p-queue": "6.6.2",
+    "puppeteer": "^20.2.1",
     "xlsx": "^0.18.5"
   }
 }
