--- a/package.json
+++ b/package.json
@@ -5,18 +5,29 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "tsc",
+    "screen": "tsc && node dist/screenshot.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.592.0",
+    "@aws-sdk/lib-storage": "^3.592.0",
+    "@types/fs-extra": "^11.0.4",
+    "@types/node": "^20.14.2",
     "axios": "^0.27.2",
+    "csv-writer": "^1.6.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.0.3",
     "form-data": "^4.0.0",
     "fs-extra": "^10.1.0",
+    "p-limit": "^3.1.0",
     "p-queue": "6.6.2",
-    "puppeteer": "^20.2.1",
+    "puppeteer": "^22.10.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5",
     "xlsx": "^0.18.5"
   }
 }
