Some fix and changes

--- a/example.env
+++ b/example.env
@@ -1,2 +1,9 @@
 PET_LOGIN=user
 PET_PASSWORD=user_password
+
+S3_STORAGE_ACCESS_KEY_ID=
+S3_STORAGE_SECRET_ACCESS_KEY=
+S3_STORAGE_BUCKET_NAME=
+S3_STORAGE_BUCKET_REGION=
+S3_STORAGE_BASE_URL=https://example.com/import
+S3_STORAGE_ENDPOINT=https://example.com
